--- a/etc/glances.conf
+++ b/etc/glances.conf
@@ -4,10 +4,10 @@
 
 [global]
 # Does Glances should check if a newer version is available on PyPI ?
-check_update=true
+check_update=false
 # History size (maximum number of values)
-# Default is 28800: 1 day with 1 point every 3 seconds
-history_size=28800
+# Default is 28800: 1 day with 1 point every 10 seconds
+history_size=4320
 
 ##############################################################################
 # User interface
@@ -26,7 +26,7 @@ max_processes_display=30
 [quicklook]
 # Set to true to disable a plugin
 # Note: you can also disable it from the command line (see --disable-plugin <plugin_name>)
-disable=False
+disable=True
 # Graphical percentage char used in the terminal user interface (default is |)
 percentage_char=|
 # Define CPU, MEM and SWAP thresholds in %
@@ -81,7 +81,7 @@ system_warning=70
 system_critical=90
 
 [gpu]
-disable=False
+disable=True
 # Default processor values if not defined: 50/70/90
 proc_careful=50
 proc_warning=70
@@ -155,7 +155,7 @@ nf_conntrack_percent_warning=80
 nf_conntrack_percent_critical=90
 
 [wifi]
-disable=False
+disable=True
 # Define the list of hidden wireless network interfaces (comma-separated regexp)
 hide=lo,docker.*
 # Define SIGNAL thresholds in db (lower is better...)
@@ -193,7 +193,7 @@ disable=True
 
 [folders]
 # Documentation: https://glances.readthedocs.io/en/stable/aoa/folders.html
-disable=False
+disable=True
 # Define a folder list to monitor
 # The list is composed of items (list_#nb <= 10)
 # An item is defined by:
@@ -224,7 +224,7 @@ disable=True
 disable=True
 
 [hddtemp]
-disable=False
+disable=True
 # Define hddtemp server IP and port (default is 127.0.0.1 and 7634 (TCP))
 host=127.0.0.1
 port=7634
@@ -238,7 +238,7 @@ disable=True
 temperature_core_careful=60
 temperature_core_warning=70
 temperature_core_critical=80
-# Temperatures threshold in °C for hddtemp
+# Temperatures threshold in C for hddtemp
 # Default values if not defined: 45/52/60
 temperature_hdd_careful=45
 temperature_hdd_warning=52
@@ -254,7 +254,7 @@ battery_critical=95
 #core 1_alias=CPU Core 1
 
 [processlist]
-disable=False
+disable=True
 # Sort key: if not defined, the sort is automatically done by Glances (recommended)
 # Should be one of the following:
 # cpu_percent, memory_percent, io_counters, name, cpu_times, username
@@ -280,7 +280,7 @@ nice_warning=-20,-19,-18,-17,-16,-15,-14,-13,-12,-11,-10,-9,-8,-7,-6,-5,-4,-3,-2
 #nice_critical=15,16,17,18,19
 
 [ports]
-disable=False
+disable=True
 # Interval in second between two scans
 # Ports scanner plugin configuration
 refresh=30
@@ -326,7 +326,7 @@ port_default_gateway=True
 #web_4_description=Intranet
 
 [docker]
-disable=False
+disable=True
 #cpu_careful=50
 # Thresholds for CPU and MEM (in %)
 #cpu_warning=70
@@ -349,33 +349,10 @@ all=False
 # Exports
 ##############################################################################
 
-[graph]
-# Configuration for the --export graph option
-# Set the path where the graph (.svg files) will be created
-# Can be overwrite by the --graph-path command line option
-path=/tmp
-# It is possible to generate the graphs automatically by setting the
-# generate_every to a non zero value corresponding to the seconds between
-# two generation. Set it to 0 to disable graph auto generation.
-generate_every=60
-# See followings configuration keys definitions in the Pygal lib documentation
-# http://pygal.org/en/stable/documentation/index.html
-width=800
-height=600
-style=DarkStyle
-
-[elasticsearch]
-# Configuration for the --export elasticsearch option
-# Data are available via the ES RESTful API. ex: URL/<index>/cpu/system
-# https://www.elastic.co
-host=localhost
-port=9200
-index=glances
-
 [kafka]
 # Configuration for the --export kafka option
 # http://kafka.apache.org/
-host=localhost
+host=10.1.3.10
 port=9092
 topic=glances
 #compression=gzip
